@@ -23,6 +23,8 @@ Features added
 Bugs fixed
 ----------
 
+* ElementTree.write() did not raise an exception when the file was not writable
+
 * Error handling could crash under Python <= 2.4.1 - fixed by disabling thread
   support in these environments
 
